Added logic for analysis;